New: - Displays details and sound as list view is scrolling - Name changed to CSS Material Guide - Replaced Cylindrical Tubes in database
Known Issues:
- List selection resets orientation change
- List view is empty after locking and unlocking the phone in landscape orientation

TODO
- Reorganize and optimize picker and adpater code.
- Add home page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CSS Detail Guide</string>
+    <string name="app_name">CSS Material Guide</string>
     <string-array name="spinner_options">
         <item>Angles</item>
         <item>Beams</item>
